projects/chd/portal-react-cavinkare/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portal-react-cavinkare
  name: portal-react-cavinkare-svc
  namespace: chd-cavinkare
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: portal-react-cavinkare
